# gcp-dataflow-template-kit

./: Dockerfile  README.md  pyproject.toml  test.py  test_mcp_server.py
.github/workflows/: deploy.yml
cli/: cli.py
dataflow_starter_kit/: main.py
dataflow_starter_kit/options/: starter_kit_options.py
dataflow_starter_kit/transforms/: transform.py
dataflow_starter_kit/utils/: config.py
mcp_server/: README.md  mcp_server.py
template_files/dataflow_starter_kit/: pipeline.py
template_files/dataflow_starter_kit/options/: starter_kit_options.py
template_files/dataflow_starter_kit/transforms/: transform.py
tests/: README.md  __init__.py  conftest.py  test_get_template_file_content.py  test_mcp_server_remote.py
