[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow_template"
version = "0.1.0"
description = "MCP server for Dataflow template creation"
authors = [{ name = "Bharath Velamala" }]
requires-python = ">=3.12"
dependencies = [
    "apache-beam[gcp]>=2.66.0",
    "click>=8.3.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.20.0",
    "uvicorn[standard]>=0.30.0",
    "fastmcp>=0.9.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
dataflow-create = "cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mcp_server", "cli", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.workspace]
members = []
